welcome.lessons.welcome.array.island.Island.scala.error
island:3: error: type mismatch;
 found   : Array[Nothing]
 required: Array[Int]
Note: Nothing <: Int, but class Array is invariant in type T.
You may wish to investigate a wildcard type such as `_ <: Int`. (SLS 3.2.10)
	var M = maxValue(T)
                         ^island:6: error: type mismatch;
 found   : Array[Nothing]
 required: Array[Int]
Note: Nothing <: Int, but class Array is invariant in type T.
You may wish to investigate a wildcard type such as `_ <: Int`. (SLS 3.2.10)
		cpt=cpt + seqInArray(T,M)
                                     ^island:9: error: value + is not a member of Nothing
				T(i)=Math.max(T(i-1)+T(i+1))			
                                                    ^island:12: error: type mismatch;
 found   : Array[Nothing]
 required: Array[Int]
Note: Nothing <: Int, but class Array is invariant in type T.
You may wish to investigate a wildcard type such as `_ <: Int`. (SLS 3.2.10)
		M = maxValue(T)
                             ^